# jig

./: .coderabbit.yaml  .gitattributes  CLAUDE.md  LICENSE  README.md  prek.toml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: workflow.yml
documentation/: testing.md
plugins/guard/.claude-plugin/: plugin.json
plugins/guard/hooks/: hooks.json
plugins/guard/scripts/: guard.py  preflight.py  safechain.py  setup.sh
plugins/jig/.claude-plugin/: plugin.json
plugins/jig/commands/: setup.md
plugins/jig/hooks/: hooks.json
plugins/jig/scripts/: guard.py  installs.py  preflight.py  safechain.py  setup.sh  sfw.py
plugins/jig/scripts/setup/: triage-labels.md
plugins/jig/skills/engineering/: README.md
plugins/jig/skills/engineering/ask-matt/: SKILL.md
plugins/jig/skills/engineering/code-review/: SKILL.md
plugins/jig/skills/engineering/to-spec/: SKILL.md
plugins/jig/skills/engineering/to-tickets/: SKILL.md
plugins/jig/skills/engineering/triage/: SKILL.md
plugins/jig/skills/engineering/wayfinder/: SKILL.md
tests/: conftest.py  test_guard_hooks.py  test_guard_sfw.py  test_manifests.py
tests/guard/: test_guard.py
